[flake8]
exclude = .tox,build,dist,docs/conf.py
doctests = yes
# ad-hoc names used in doctests
builtins = obj, obj1, obj2, MyClass
ignore = E226,W503
# https://pep8.readthedocs.org/en/latest/intro.html#error-codes
# E226: missing whitespace around arithmetic operator
# W503: line break before binary operator

[zest.releaser]
python-file-with-version = objgraph.py

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
